--- a/AutomatAis3Full/Form/Automat/Okp2/RegisterDeclarations/RegisterDeclarations/FormRegisterDeclarations.xaml
+++ b/AutomatAis3Full/Form/Automat/Okp2/RegisterDeclarations/RegisterDeclarations/FormRegisterDeclarations.xaml
@@ -31,6 +31,10 @@
                       SelectedDate="{Binding DatePicker.Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       Text="{Binding StringFormat='dd MMM yyyy', RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
             </WrapPanel>
+            <WrapPanel>
+                <Label FontSize="16" FontStyle="Normal" Content="Проверка количества извещений 1 или более:"></Label>
+                <TextBox FontSize="16" FontStyle="Normal" PreviewTextInput="NumberValidationTextBox" Text="{Binding DatePicker.CountIzveshenie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MaxLength="1"></TextBox>
+            </WrapPanel>
             <Label FontSize="16" FontStyle="Normal"  Content="Команда приостановить Shift+S" />
             <Label FontSize="16" FontStyle="Normal"  Content="Команда возобновить Shift+A" />
         </StackPanel>
