--- a/AutomatAis3Full/Form/Automat/It/UserTemplateAndRule/UserControl/FormUserTemplateAndRule.xaml
+++ b/AutomatAis3Full/Form/Automat/It/UserTemplateAndRule/UserControl/FormUserTemplateAndRule.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.It.RuleInfoFull.UserControl.FormRuleInfoFull"
+﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.It.UserTemplateAndRule.UserControl.FormUserTemplateAndRule"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.It.RuleInfoFull.DataContext"
-             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.It.RuleInfoFull.UserControl"
+             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.It.UserTemplateAndRule.DataContext"
+             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.It.UserTemplateAndRule.UserControl"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance {x:Type datacontext:RuleInfoFullDataContext}}"
+             d:DataContext="{d:DesignInstance {x:Type datacontext:UserTemplateAndRuleDataContext}}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,7 +22,7 @@
             Grid.Row="0"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
-            Content="Автомат для ветки: 'Налоговое администрирование\ЦСУД\Управление ролевой принадлежностью\Мои роли' Сбор информации о перечне всех доступных режимах ПЗ"  />
+            Content="Автомат для ветки: 'Налоговое администрирование\ЦСУД\Управление ролевой принадлежностью\Управление ролями' Сбор информации о перечне всех пользователей и их шаблонах и ролях"  />
         <StackPanel
             Grid.Row="1"
             Grid.Column="0"
