--- a/AutomatAis3Full/Form/Automat/Okp2/TaxJournal/TaxJournal/FormTaxJournal.xaml
+++ b/AutomatAis3Full/Form/Automat/Okp2/TaxJournal/TaxJournal/FormTaxJournal.xaml
@@ -18,75 +18,6 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0">
-            <ToolBar Height="100" Margin="0,0,0,10">
-                <StackPanel Height="100">
-                    <WrapPanel Margin="0,0,0,10">
-                        <Button Width="40" Height="40" Command="{Binding DownloadDb}" Cursor="Hand" ToolTip="Выгрузить документы из БД"
-                                IsEnabled="{Binding DownloadPrintDb.IsLoadFileDb, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}">
-                            <Button.Template>
-                                <ControlTemplate>
-                                    <materialDesign:PackIcon
-                                        Background="Green"
-                                        BorderBrush="Black"
-                            Width="40"
-                            Height="40"
-                            Kind="LoginVariant" />
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
-                        <Label Name="Db" HorizontalAlignment="Center" Width="Auto" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="Количество файлов в Базе данных:"/>
-                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="{Binding DownloadPrintDb.CountFileAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                               ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"
-                               Validation.ErrorTemplate="{StaticResource ValidationFailederror}"
-                               />
-                        <Grid Height="40" Width="400">
-                            <ProgressBar
-                    Width="400"
-                    Height="30"
-                    Margin="10,0,0,0"
-                    Maximum="{Binding DownloadPrintDb.ProgressDownloadMaximum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
-                    Value="{Binding DownloadPrintDb.ProgressDownload, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
-                            <Label
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Content="{Binding DownloadPrintDb.DownloadFile, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
-                        </Grid>
-                    </WrapPanel>
-                    <WrapPanel >
-                        <Button Width="40" Height="40" ToolTip="Распечатать документы" IsEnabled="{Binding DownloadPrintDb.IsPrintFile, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" Command="{Binding PrintFile}" Cursor="Hand" >
-                            <Button.Template>
-                                <ControlTemplate>
-                                    <materialDesign:PackIcon
-                                        Background="Green"
-                                        BorderBrush="Black"
-                            Width="40"
-                            Height="40"
-                            Kind="Printer" />
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
-                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="Количество файлов на печать:"  Width="{Binding ElementName=Db, Path=ActualWidth }" />
-                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="{Binding DownloadPrintDb.CountFileAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" 
-                               ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"
-                               Validation.ErrorTemplate="{StaticResource ValidationFailederror}"
-                               />
-                        <Grid Height="40" Width="400">
-                            <ProgressBar
-                    Width="400"
-                    Height="30"
-                    Margin="10,0,0,0"
-                    Maximum="{Binding DownloadPrintDb.ProgressPrintMaximum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
-                    Value="{Binding DownloadPrintDb.ProgressPrint, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
-                            <Label
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Content="{Binding DownloadPrintDb.StatusPrint, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
-                        </Grid>
-                    </WrapPanel>
-                </StackPanel>
-            </ToolBar>
             <ContentControl
                 Margin="5,5,5,5"
                 HorizontalAlignment="Left"
@@ -109,7 +40,7 @@
                       SelectedDate="{Binding DatePicker.DateResh, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       Text="{Binding StringFormat='dd MMM yyyy', RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
             </WrapPanel>
-
+            <CheckBox FontSize="16" FontStyle="Normal" Content="Выставлять решения о привлечении к ответственности" IsChecked="{Binding StartButton.IsChekcs}" />
             <Label FontSize="16" FontStyle="Normal"  Content="Команда приостановить Shift+S" />
             <Label FontSize="16" FontStyle="Normal"  Content="Команда возобновить Shift+A" />
         </StackPanel>
