--- a/SetupAutomatAis3Full/DialogForm/WixUI_InstallAutomatAis3.wxs
+++ b/SetupAutomatAis3Full/DialogForm/WixUI_InstallAutomatAis3.wxs
@@ -44,13 +44,13 @@
         <Control Id="SettingServers" Type="Text" X="40" Y="55" Width="300" Height="15" Transparent="yes" NoPrefix="yes" Text="Настройки серверной части для генерации писем:"></Control>
         <Control Id="Service" Type="Text" X="10" Y="75" Width="105" Height="15" Transparent="yes" NoPrefix="yes" Text="Наименование сервера:"></Control>
         <Control Id="Service51" Type="Edit" X="110" Y="75" Width="110" Height="15" Property="SERVICE" Text="[SERVICE]"  ToolTip="Наименование сервера:" >
-          <Property Id="SERVICE" Value="I7751-APP127" />
+          <Property Id="SERVICE" Value="77068-APP065" />
         </Control>
      
         <Control Id="ConnectionString" Type="Text" X="10" Y="115" Width="105" Height="15" Transparent="yes" NoPrefix="yes" Text="Строка соединения с БД:"></Control>
         <Control Id="ServerText" Type="Text" X="10" Y="135" Width="50" Height="15" Transparent="yes" NoPrefix="yes" Text="Сервер:"></Control>
         <Control Id="Server" Type="Edit" X="55" Y="135" Width="100" Height="15" ToolTip="Наименование сервера:" Property="SERVER" Text="[SERVER]">
-          <Property Id="SERVER" Value="I7751-APP127"/>
+          <Property Id="SERVER" Value="77068-APP065"/>
         </Control>
         <Control Id="DbText" Type="Text" X="155" Y="135" Width="15" Height="15" Transparent="yes" NoPrefix="yes" Text="БД:"></Control>
         <Control Id="Db" Type="Edit" X="175" Y="135" Width="100" Height="15" ToolTip="База данных:" Property="DB" Text="[DB]">
